Added activity for Home Screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAccidentApp">
         <activity
+            android:name=".Home"
+            android:exported="false" />
+        <activity
             android:name=".Registration"
             android:exported="true" />
         <activity android:name=".MainActivity">
