--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidAccidentApp">
+        android:theme="@style/Theme.Design">
+        <activity
+            android:name=".Step2Activity"
+            android:exported="true" />
         <activity
             android:name=".Registration"
             android:exported="true" />
