--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAccidentApp">
         <activity
+            android:name=".SavedVehicles"
+            android:exported="false" />
+        <activity
+            android:name=".VehicleDetails"
+            android:exported="false" />
+        <activity
             android:name=".infoExchange"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +26,8 @@
         </activity>
         <activity
             android:name=".Registration"
-            android:exported="true">
-
-        </activity>
-        <activity android:name=".MainActivity"></activity>
+            android:exported="true" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
