--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidaccidentapp">
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <!--Permission for call must be used in the manifest before requesting-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,12 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAccidentApp">
         <activity
+            android:name=".Login"
+            android:exported="true" />
+        <activity
             android:name=".Step5"
             android:exported="true" />
         <activity
             android:name=".Registration"
             android:exported="true" />
-        <activity android:name=".Login">
+        <activity android:name=".Step1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
