--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidaccidentapp">
 
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <!--Permission for call must be used in the manifest before requesting-->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAccidentApp">
+        <activity
+            android:name=".FirebaseUI"
+            android:exported="true" />
+        <activity
+            android:name=".GoogleSignInActivity"
+            android:exported="true" />
         <activity
             android:name=".Login"
             android:exported="true" />
