--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAccidentApp">
         <activity
+            android:name=".GoogleSignIn"
+            android:exported="true" />
+        <activity
+            android:name=".Registering"
+            android:exported="true" />
+        <activity
             android:name=".FirebaseUI"
             android:exported="true" />
         <activity
-            android:name=".GoogleSignInActivity"
-            android:exported="true" />
-        <activity
-            android:name=".Login"
+            android:name=".Step1"
             android:exported="true" />
         <activity
             android:name=".Step5"
@@ -26,7 +29,7 @@
         <activity
             android:name=".Registration"
             android:exported="true" />
-        <activity android:name=".Step1">
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
