--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,29 @@
         <activity
             android:name=".VehicleDetails"
             android:exported="false" />
+
         <activity
-            android:name=".infoExchange"
-            android:exported="true">
+            android:name=".Registering"
+            android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
         <activity
-            android:name=".Registration"
-            android:exported="true" />
-        <activity android:name=".MainActivity" />
+            android:name=".SignedInActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".infoExchange"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
