--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidaccidentapp">
+    package="com.example.androidaccidentapp" >
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -8,13 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidAccidentApp">
+        android:theme="@style/Theme.AndroidAccidentApp" >
+        <activity
+            android:name=".Camera"
+            android:exported="false" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:noHistory="true"
             android:screenOrientation="portrait"
-            android:theme="@style/SplashStyle">
+            android:theme="@style/SplashStyle" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
