--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidaccidentapp">
+    package="com.example.androidaccidentapp" >
 
     <application
         android:allowBackup="true"
@@ -8,36 +8,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidAccidentApp">
+        android:theme="@style/Theme.AndroidAccidentApp" >
+        <activity
+            android:name=".driverInfo"
+            android:exported="false" />
         <activity
             android:name=".SavedVehicles"
             android:exported="false" />
         <activity
             android:name=".VehicleDetails"
             android:exported="false" />
-
         <activity
             android:name=".Registering"
             android:exported="true" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".SignedInActivity"
             android:exported="false" />
-
         <activity
-            android:name=".infoExchange"
-            android:exported="true">
-
+            android:name=".insuranceExchange"
+            android:exported="true" >
         </activity>
-
     </application>
 
 </manifest>
