added home page and added profile icon functionality to all activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
+            android:name=".Home"
+            android:exported="true" />
+        <activity
             android:name=".Step2"
             android:exported="true" />
         <!--
