--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidaccidentapp">
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidAccidentApp">
+        android:theme="@style/Theme.AndroidAccidentApp"
+        android:requestLegacyExternalStorage="true"
+        >
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".finalExchangeActivity"
-            android:exported="false" />
+            android:exported="true"></activity>
         <activity
             android:name=".driverInfo"
             android:exported="false" />
@@ -20,22 +34,18 @@
             android:exported="false" />
         <activity
             android:name=".VehicleDetails"
-            android:exported="false" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".Registering"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".SignedInActivity"
             android:exported="false" />
         <activity
             android:name=".insuranceExchange"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MapsActivity"
             android:exported="true" />
