--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity
+            android:name=".vehicleRegistration"
+            android:exported="true" />
+        <activity
+            android:name=".insuranceRegistration"
+            android:exported="true" />
+        <activity
+            android:name=".driveRegistration"
+            android:exported="true" />
+        <activity
+            android:name=".GeneratePDF"
+            android:exported="true" />
         <activity
             android:name=".Home"
             android:exported="true" />
