--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
             android:name=".Handbook"
             android:exported="true" />
         <activity
-            android:name=".SplashScreen"
-            android:name=".finalCheck"
+            android:name=".Login"
             android:exported="true" />
         <activity
             android:name=".Step1"
@@ -49,24 +48,13 @@
         <activity
             android:name=".Registering"
             android:exported="true" />
-        <activity
-            android:name=".Step1"
-            android:name=".vehicleRegistration"
-            android:exported="true">
 
-        </activity>
-        <activity
-            android:name=".insuranceRegistration"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".driveRegistration"
-            android:exported="true">
-
-        </activity>
         <activity
             android:name=".GeneratePDF"
+            android:exported="true" />
+
+        <activity
+            android:name=".Step5"
             android:exported="true" >
 
         </activity>
@@ -108,21 +96,14 @@
             android:exported="true">
 
         </activity>
-        <activity
-            android:name=".Registering"
-            android:exported="true">
 
 
-        </activity>
-        <activity
-            android:name=".SignedInActivity"
-            android:exported="false" />
         <activity
             android:name=".insuranceExchange"
             android:exported="true" />
         <activity
             android:name=".Step3"
-            android:exported="true">
+            android:exported="true"/>
         <activity
             android:name=".MapsActivity"
             android:exported="true">
@@ -146,7 +127,7 @@
             android:name=".ProfileUser"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".SplashScreen"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
