--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,7 @@
         <activity
             android:name=".Handbook"
             android:exported="true" />
-        <activity
-            android:name=".Login"
-            android:exported="true" />
+
         <activity
             android:name=".Step1"
             android:exported="true" />
@@ -111,10 +109,7 @@
 
         <activity
             android:name=".Login"
-            android:exported="true"
-            android:noHistory="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/SplashStyle" >
+            android:exported="true">
 
         </activity>
         <activity
