--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidaccidentapp">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -19,15 +18,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity
+            android:name=".Step22"
+            android:exported="true" />
+        <activity
+            android:name=".HandbookPrevention"
+            android:exported="true" />
         <activity
             android:name=".Handbook"
             android:exported="true" />
-
         <activity
             android:name=".Step1"
             android:exported="true" />
@@ -46,22 +49,15 @@
         <activity
             android:name=".Registering"
             android:exported="true" />
-
         <activity
             android:name=".GeneratePDF"
             android:exported="true" />
-
         <activity
             android:name=".Step5"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Home"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".Step2"
             android:exported="true" />
@@ -77,41 +73,30 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-
         <activity
             android:name=".finalExchangeActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".driverInfo"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".SavedVehicles"
             android:exported="false" />
         <activity
             android:name=".VehicleDetails"
-            android:exported="true">
-
-        </activity>
-
-
+            android:exported="true" />
         <activity
             android:name=".insuranceExchange"
             android:exported="true" />
         <activity
             android:name=".Step3"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".MapsActivity"
-            android:exported="true">
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".Login"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ProfileInsurance"
             android:exported="false" />
@@ -123,19 +108,17 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".Camera"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
@@ -143,9 +126,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
-
     </application>
 
 </manifest>
