--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidaccidentapp">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,46 +19,45 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".Step22"
-            android:exported="true" />
-        <activity
-            android:name=".HandbookPrevention"
-            android:exported="true" />
-        <activity
-            android:name=".Handbook"
+            android:name=".finalCheck"
             android:exported="true" />
         <activity
             android:name=".Step1"
             android:exported="true" />
         <activity
-            android:name=".finalCheck"
-            android:exported="true" />
-        <activity
             android:name=".vehicleRegistration"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".insuranceRegistration"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".driveRegistration"
-            android:exported="true" />
-        <activity
-            android:name=".Registering"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".GeneratePDF"
-            android:exported="true" />
-        <activity
-            android:name=".Step5"
-            android:exported="true" />
+            android:exported="true" >
+
+
+
+        </activity>
         <activity
             android:name=".Home"
-            android:exported="true" />
+            android:exported="true">
+
+
+        </activity>
         <activity
             android:name=".Step2"
             android:exported="true" />
@@ -73,30 +73,50 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+
         <activity
             android:name=".finalExchangeActivity"
-            android:exported="true" />
+            android:exported="true"></activity>
         <activity
             android:name=".driverInfo"
-            android:exported="false" />
+            android:exported="false">
+
+
+        </activity>
         <activity
             android:name=".SavedVehicles"
             android:exported="false" />
         <activity
             android:name=".VehicleDetails"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Registering"
+            android:exported="true">
+
+
+        </activity>
+        <activity
+            android:name=".SignedInActivity"
+            android:exported="false" />
         <activity
             android:name=".insuranceExchange"
             android:exported="true" />
         <activity
-            android:name=".Step3"
-            android:exported="true" />
-        <activity
             android:name=".MapsActivity"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
+
         <activity
-            android:name=".Login"
-            android:exported="true" />
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:noHistory="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashStyle" >
+
+        </activity>
         <activity
             android:name=".ProfileInsurance"
             android:exported="false" />
@@ -107,27 +127,19 @@
             android:name=".ProfileUser"
             android:exported="false" />
         <activity
-            android:name=".SplashScreen"
-            android:exported="true">
+            android:name=".Login"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".Camera"
-            android:exported="true" />
 
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.android.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
-        </provider>
+
+
+        </activity>
+
+
     </application>
 
 </manifest>
