--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,14 @@
 
         </activity>
         <activity
-            android:name=".Step2"
+            android:name=".Step22"
+            android:exported="true" />
+        <activity
+            android:name=".Step3"
+            android:exported="true" />
+
+        <activity
+            android:name=".Camera"
             android:exported="true" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -87,6 +94,9 @@
             android:name=".SavedVehicles"
             android:exported="false" />
         <activity
+            android:name=".HandbookPrevention"
+            android:exported="false" />
+        <activity
             android:name=".VehicleDetails"
             android:exported="true">
 
@@ -97,9 +107,14 @@
 
 
         </activity>
+
         <activity
-            android:name=".SignedInActivity"
-            android:exported="false" />
+            android:name=".Handbook"
+            android:exported="true">
+
+
+        </activity>
+
         <activity
             android:name=".insuranceExchange"
             android:exported="true" />
@@ -129,16 +144,31 @@
         <activity
             android:name=".Login"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
 
 
         </activity>
 
+        <activity
+            android:name=".SplashScreen"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
     </application>
 
