--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-database'
     implementation "androidx.cardview:cardview:1.0.0"
+
+    implementation 'com.firebaseui:firebase-ui-storage:1.2.0'
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+
 }
